RESOLVED FIXED152154
[Font Features] r193894 introduces leaks
https://bugs.webkit.org/show_bug.cgi?id=152154
Summary [Font Features] r193894 introduces leaks
Myles C. Maxfield
Reported 2015-12-10 15:53:17 PST
[Font Features] r193894 introduces leaks
Attachments
Patch (2.48 KB, patch)
2015-12-10 15:53 PST, Myles C. Maxfield
joepeck: review+
Myles C. Maxfield
Comment 1 2015-12-10 15:53:35 PST
WebKit Commit Bot
Comment 2 2015-12-10 15:55:06 PST
Attachment 267134 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 3 2015-12-10 16:03:39 PST
Comment on attachment 267134 [details] Patch r=me
Myles C. Maxfield
Comment 4 2015-12-10 16:05:27 PST
Radar WebKit Bug Importer
Comment 5 2015-12-10 17:26:40 PST
Note You need to log in before you can comment on or make changes to this bug.