[Font Features] r193894 introduces leaks https://bugs.webkit.org/show_bug.cgi?id=152154

Reviewed by Joe Pecoraro.

* platform/graphics/cocoa/FontCocoa.mm:
(WebCore::smallCapsTrueTypeDictionary):
(WebCore::createCTFontWithoutSynthesizableFeatures):

Canonical link: https://commits.webkit.org/170277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193932 268f45cc-cd09-0410-ab3c-d52691b4dbfc